// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

//--------------------------------------------------------------------------------------------------------//
// use this command to generate proto files --------------------------------------------------------------//
// python -m grpc_tools.protoc -I . --python_out=. --grpc_python_out=. rpi.proto ---//
//--------------------------------------------------------------------------------------------------------//

syntax = "proto3";

package rpi;

// The greeting service definition.
service RPI {
  rpc askBehavior (RequestBehavior) returns (Reply) {}
  rpc sendSensorData (RequestSensorData) returns (Reply) {}
}

message RequestBehavior {
  string roomName = 1;
  string data = 2;
}

message RequestSensorData {
  string roomName = 1;
  string csvdata = 2; //string from csv
}

message Reply {
  string res = 1;
}
